--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,10 @@
 h1 {
     color: rgba(195, 209, 212, 0.964);
 }
-body{
-    background-color: black;
-}
+
 h2{}
 p{
-    color: white;
+    color: black;
     
 }
 header {
